--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
             Ukraine</p>
     </div>
 
+    <div class="education-container">
+        <!-- <h4 class="education-title">Courses</h4> -->
+        <h4 class="education-univercity"><a class="link-Go" href="https://beetroot.academy/" target="_blank"
+                rel="noopener noreferrer nofollow">Beetroot Academy</a></h4>
+        <h4 class="education-class">Front-End(HTML, CSS)</h4>
+        <p class="education-period">October 2022 - March 2023 <span class="work-experience-period-separator">|</span>
+            Ukraine</p>
+    </div>
 
 
 </div>
