--- a/index.html
+++ b/index.html
@@ -28,16 +28,25 @@
     </div>
     <!-- My Project-->
     <div class="my-projects-container">
-        <h3 class="my-projects-title">Projects</h3>
+        <h3 class="my-projects-title">Project Experience</h3>
         <!-- list of projects-->
         <div>
         <ol class="my-projects-list">
+            <li class="my-projects-item"><p class="contacts-item">Project name:<span class="contacts-type"></span> <a class="contacts-link"
+                    href="https://belevtsov91.github.io/goit-markup-hw-06/" target="_blank" rel="noopener noreferrer nofollow">First Project Front-End</a></p></li>
         <li class="my-projects-item">
-            <a class="my-projects-item-link" href="https://belevtsov91.github.io/goit-markup-hw-06/" target="_blank" rel="noopener noreferrer nofollow">https://belevtsov91.github.io/goit-markup-hw-06/</a><span class="my-projects-item-tech">---------------
+            Project link:
+        <a class="my-projects-item-link" href="https://github.com/Belevtsov91/goit-markup-hw-06" target="_blank" rel="noopener noreferrer nofollow">Codes</a><span class="my-projects-item-tech">---------------
             [ HTML5, CSS ]</span>
         </li> 
         <li class="my-projects-item">
-            <a class="my-projects-item-link" href="https://svolodarskyi.github.io/portfolio-2.0/" target="_blank" rel="noopener noreferrer nofollow">https://svolodarskyi.github.io/portfolio-2.0/</a><span class="my-projects-item-tech">---------
+            <p class="contacts-item">Project name:<span class="contacts-type"></span> <a class="contacts-link"
+                    href="https://svolodarskyi.github.io/portfolio-2.0/" target="_blank"
+                    rel="noopener noreferrer nofollow">Second Project</a></p>
+        </li>
+        <li class="my-projects-item">
+            Project link:
+            <a class="my-projects-item-link" href="https://github.com/svolodarskyi/portfolio-2.0" target="_blank" rel="noopener noreferrer nofollow">Codes</a><span class="my-projects-item-tech">---------
             [ HTML5, CSS, JavaScript ]</span>
         </li>
         <!-- <li class="my-projects-item">
@@ -77,8 +86,8 @@
             company policies.</li>
     </ul>
 </div>
-<div class="work-experience-container">
-    <!-- company 3-->
+<!-- <div class="work-experience-container">
+    
     <h4 class="work-experience-company">Bartender <span class="company-name">Princess Cruises</span></h4>
     <p class="work-experience-period">August 2018 - February 2020   <span class="work-experience-period-separator">|</span>   USA</p>
 
@@ -90,7 +99,7 @@
         <li class="work-experience-duties-item">Monitors inventory, restocks supplies, and maintains accurate records.
         Keeps the bar area clean and adheres to hygiene and safety regulations.</li>
     </ul>
-</div>
+</div> -->
 </div>
     <!--education-->
     <div class="education-container">
@@ -121,16 +130,17 @@
 </div>
 <!--Sidebar-->  
 <aside class="sidebar">
-        <img src="img/photo_2024-01-03_15-05-43.png" alt="My photo" width="370">
+        <img src="img/photo_2024-01-03_15-05-43.png" alt="My photo" width="300">
         <div class="sidebar-content">
         <!-- contacts-->
         <div class="contacts-container">
             <h3 class="contacts-title">Contacts</h3>
-            <p class="contacts-item"><span class="contacts-type">C:</span> <a class="contacts-link" href="+380957131372">+380957131372</a></p>
-            <p class="contacts-item"><span class="contacts-type">E:</span> <a class="contacts-link" href="vitaliybelevcov@gmail.com">vitaliybelevcov@gmail.com</a></p>
-            <p class="contacts-item"><span class="contacts-type">GIT:</span> <a class="contacts-link" href="https://github.com/Belevtsov91" target="_blank" rel="noopener noreferrer nofollow">GitHub</a></p>
-            <p class="contacts-item"><span class="contacts-type">linkedin:</span> <a class="contacts-link"
-                    href="https://www.linkedin.com/in/vitalii-belevtsov/">Vitalii Belevtsov</a></p>
+            <p class="contacts-item"><span class="contacts-type"></span> <a class="contacts-link" href="+380957131372">+380957131372</a></p>
+            <p class="contacts-item"><span class="contacts-type"></span> <a class="contacts-link" href="vitaliybelevcov@gmail.com">vitaliybelevcov@gmail.com</a></p>
+            <p class="contacts-item"><span class="contacts-type"></span> <a class="contacts-link" href="https://github.com/Belevtsov91" target="_blank" rel="noopener noreferrer nofollow">GitHub</a></p>
+            <p class="contacts-item"><span class="contacts-type"> </span> <a class="contacts-link"
+                    href="https://www.linkedin.com/in/vitalii-belevtsov/" target="_blank" rel="noopener noreferrer nofollow">linkedin</a></p>
+                    <p class="contacts-item">Brasov, Romania</p>
         </div>
         <!-- skills-->
         <div class="skills-container">
@@ -147,7 +157,7 @@
         </div>
 
 <!--Soft Skills-->     
-<div class="sf-skills-container">
+<div class="skills-container">
     <h3 class="sf-skills-title">Soft Skills</h3>
     <ul class="sf-skills-list">
         <li class="sf-skills-list-item">Strong problem-solving and analytical thinking</li>
@@ -156,6 +166,18 @@
         <li class="sf-skills-list-item">Time management and ability to meet deadlines</li>
         <li class="sf-skills-list-item">Attention to detail and commitment to quality</li>
         <li class="sf-skills-list-item">Creativity and user-centric approach to development</li>
+    </ul>
+</div>
+<!--language-->
+<div class="skills-container">
+    <h3 class="sf-skills-title">Languages</h3>
+    <ul class="sf-skills-list">
+        <li class="sf-skills-list-item">English – B2 (Upper-Intermediate)</li>
+        <li class="sf-skills-list-item">Ukrainian – Native / Fluent</li>
+        <li class="sf-skills-list-item">Russian – Native / Fluent</li>
+        <!-- <li class="sf-skills-list-item">Time management and ability to meet deadlines</li>
+        <li class="sf-skills-list-item">Attention to detail and commitment to quality</li>
+        <li class="sf-skills-list-item">Creativity and user-centric approach to development</li> -->
     </ul>
 </div>
 </div>
